fixed issues rising from the overflow change

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .view.hidden {
-  display: none;
+  display: none !important;
 }
 
 /* Container */
